# flip-cards

./: Cargo.toml  LICENSE  README.md  build-prod.sh  index.html  tailwind.config.js
src/: app.rs  main.rs
src/components/: card_details.rs  cards_list.rs  mod.rs
src/models/: card_content.rs  mod.rs
