[package]
edition = "2021"
name = "flip-cards"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# explicitly define getrandom to be used with rand
getrandom = {version = "0.2", features = ["js"]}
rand = "0.8.5"
yew = "0.19"
